# graal-serverlist

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  JenkinsEnv.json  Jenkinsfile  README.md  my.rc.in
cmake/: AddTest.cmake  FindMySQL.cmake
dependencies/: mysqlclient.lib
dependencies/include/mysql/: mysql_version.h
docker/: listserver-x86_64-linux-gnu.dockerfile  listserver-x86_64-linux-musl.dockerfile  listserver-x86_64-w64-mingw.dockerfile
docs/: sql_account_creation.txt  sql_tables.txt
server/: CMakeLists.txt
server/include/: CFileSystem.h  CLog.h  CMySQL.h  CSettings.h  CSocket.h  CString.h  ClientType.h  DeviceIdentity.h  FProfile.h  IConfig.h.in  IDataBackend.h  IrcChannel.h  IrcConnection.h  IrcServer.h  IrcStub.h  ListServer.h  MySQLBackend.h  Player.h  PlayerConnection.h  PlayerProfile.h  RealIrcStub.h  ServerConnection.h  ServerHQ.h  ServerPlayer.h  SimulatedIrcStub.h  TPlayer.h  TServer.h  main.h  windresrc.h.in
server/src/: CFileSystem.cpp  CLog.cpp  CMakeLists.txt  CMySQL.cpp  CSettings.cpp  CSocket.cpp  CString.cpp  ClientType.cpp  FProfile.cpp  IrcChannel.cpp  IrcConnection.cpp  IrcServer.cpp  ListServer.cpp  MySQLBackend.cpp  PlayerConnection.cpp  RealIrcStub.cpp  ServerConnection.cpp  ServerPlayer.cpp  SimulatedIrcStub.cpp  TPlayer.cpp  TServer.cpp  main.cpp
